<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>com.mycompany.app</groupId>
	<artifactId>mockito2</artifactId>
	<version>1.0-SNAPSHOT</version>

    <name>Simple Demo how to use PowerMock with Mockito2</name>

    <description>
        The modules shows how PowerMock 1.7.0 and upper could be used with Mockito2 mock-maker-inline.
        Mockito mock-maker-inline is useful when you want to mock final class/method without using PowerMock.
        See issue: https://github.com/mockito/mockito/issues/1110
    </description>
	
    <properties>
        <powermock.version>2.0.9</powermock.version>
        <mockito2.version>2.21.0</mockito2.version>
        <assertj-core.version>3.5.2</assertj-core.version>
        <commons-lang3.version>3.4</commons-lang3.version>
		
		<maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
	
	  <build>
		<plugins>
		  <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<configuration>
			  <argLine>
				--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.base=ALL-UNNAMED
			  </argLine>
			</configuration>
		  </plugin>
		</plugins>
	  </build>

    <dependencies>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-core</artifactId>
			<version>${powermock.version}</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
			<version>${powermock.version}</version>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito2.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
			<version>${assertj-core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
        </dependency>
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>LATEST</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>		
    </dependencies>

</project>